# vivictpp

./: .clang-format  .clang-format-ignore  .clang-tidy  .gitignore  .gitmodules  CHANGELOG.md  README.md  get-version.sh  license-info.txt  meson.build  meson_options.txt  vivictpp.wxs
.github/workflows/: macos-build-ffmpeg5.yml  macos-build.yml  publish-snap.yml  release.yml  snap-build.yml  snapcraft-release-stable.yml  ubuntu-build.yml  vivictpp.yml  windows-build.yml
.reuse/: dep5
appimage/: .gitignore  Dockerfile  appimage_build.md  vivictpp_appimage.sh
dockerfiles/: ubuntu-20.04
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
imgui/: main.cpp
include/: AVSync.hh  Controller.hh  EventListener.hh  EventLoop.hh  OptParser.hh  Resolution.hh  Seeking.hh  Settings.hh  SourceConfig.hh  TimeUtils.hh  Version.hh  VideoInputs.hh  VideoMetadata.hh  VideoPlayback.hh  VivictPP.hh  VivictPPConfig.hh
include/audio/: AudioOutput.hh
include/imgui/: About.hh  Colors.hh  Controls.hh  Events.hh  FileDialog.hh  Fonts.hh  Help.hh  ImGuiSDL.hh  Logs.hh  MainMenu.hh  PlotWindow.hh  QualityFileDialog.hh  SettingsDialog.hh  Splash.hh  VideoMetadataDisplay.hh  VideoWindow.hh  VivictPPImGui.hh  WidgetUtils.hh
include/libav/: AVErrorUtils.hh  Decoder.hh  DecoderMetadata.hh  DecoderOptions.hh  Filter.hh  FormatHandler.hh  Frame.hh  HwAccelUtils.hh  Packet.hh  Utils.hh
include/logging/: Logging.hh
include/qualitymetrics/: QualityMetrics.hh
include/sdl/: AudioOutput.hh  SDLAudioOutput.hh  SDLEventLoop.hh  SDLUtils.hh
include/time/: Time.hh  TimeUtils.hh
include/ui/: Container.hh  DisplayState.hh  Events.hh  FontSize.hh  Fonts.hh  FrameMetadataBox.hh  FreeMono.hh  MetadataDisplay.hh  OpenGLVideoTextures.hh  SDLVideoTextures.hh  ScreenOutput.hh  SeekBar.hh  SpeedDisplay.hh  Splash.hh  TextBox.hh  TextTexture.hh  ThumbnailTexture.hh  Ui.hh  VideoDisplay.hh  VideoScaler.hh  VideoTextures.hh  VivictPPUI.hh  VivictUI.hh  VmafGraph.hh
include/ui/opengl/: OpenGLUtils.hh  Shaders.hh  TextureRenderer.hh
include/video/: Thumbnail.hh  VideoIndexer.hh
include/vmaf/: VmafLog.hh
include/workers/: DecoderWorker.hh  FrameBuffer.hh  InputWorker.hh  PacketQueue.hh  PacketWorker.hh  QueuePointer.hh  VideoInputMessage.hh
libs/utf8/: utf8.cpp  utf8.h
scripts/: vivictpp.wrapper
snap/: snapcraft.yaml
src/: AVSync.cc  Bilinear.cc  Controller.cc  FormatHandler.cc  OptParser.cc  Resolution.cc  Settings.cc  TimeUtils.cc  VideoInputs.cc  VideoMetadata.cc  VideoPlayback.cc  VivictPP.cc  main.cc  main_imgui.cc
src/imgui/: About.cc  Controls.cc  FileDialog.cc  Fonts.cc  Help.cc  ImGuiSDL.cc  Logs.cc  MainMenu.cc  PlotWindow.cc  QualityFileDialog.cc  SettingsDialog.cc  VideoMetadataDisplay.cc  VideoWindow.cc  VivictPPImGui.cc  WidgetUtils.cc
src/libav/: Decoder.cc  Filter.cc  FormatHandler.cc  Frame.cc  HwAccelUtils.cc  Packet.cc  Utils.cc
src/logging/: Logging.cc
src/qualitymetrics/: QualityMetrics.cc
src/sdl/: AudioOutput.cc  SDLAudioOutput.cc  SDLEventLoop.cc  SDLUtils.cc
src/time/: TimeUtils.cc
src/ui/: Container.cc  FontSize.cc  Fonts.cc  MetadataDisplay.cc  OpenGLVideoTextures.cc  SDLVideoTextures.cc  ScreenOutput.cc  SeekBar.cc  TextBox.cc  TextTexture.cc  ThumbnailTexture.cc  VideoDisplay.cc  VideoScaler.cc  VideoTextures.cc  VivictUI.cc  VmafGraph.cc
src/ui/opengl/: OpenGLUtils.cc  TextureRenderer.cc
src/video/: VideoIndexer.cc
src/vmaf/: VmafLog.cc
src/workers/: DecoderWorker.cc  FrameBuffer.cc  PacketQueue.cc  PacketWorker.cc  QueuePointer.cc  VideoInputMessage.cc
subprojects/: catch2.wrap  cli11.wrap  platformfolders.wrap  sdl2_ttf.wrap  sdl3.wrap  sdl3_ttf.wrap  spdlog.wrap
subprojects/packagefiles/platformfolders-4.2.0/: 0001-build-add-meson-build-file.patch  meson.build
subprojects/packagefiles/sdl3_ttf-3.2.2/: meson.build
test/: PlaybackTest.cc  QueuePointerTest.cc  SeekTest.cc  SettingsTest.cc
test/qualitymetrics/: QualityMetricsTest.cc
testdata/: hls2-frames.csv  vmaf.csv  vmaf.json
testdata/hls1/: .~lock.hls1_VFRAMES.csv#  0000.ts  0001.ts  0002.ts  0003.ts  0004.ts  0005.ts  0006.ts  0007.ts  0008.ts  0009.ts  0010.ts  0011.ts  hls1.m3u8  hls1_VFRAMES.csv
testdata/hls2/: hls2_0.m3u8  hls2_0_0000.ts  hls2_0_0001.ts  hls2_0_0002.ts  hls2_0_0003.ts  hls2_0_0004.ts  hls2_0_0005.ts  hls2_0_0006.ts  hls2_0_0007.ts  hls2_0_0008.ts  hls2_0_0009.ts  hls2_0_0010.ts  hls2_0_0011.ts  hls2_1.m3u8  hls2_1_0000.ts  hls2_1_0001.ts  hls2_1_0002.ts  hls2_1_0003.ts  hls2_1_0004.ts  hls2_1_0005.ts  hls2_1_0006.ts  hls2_1_0007.ts  hls2_1_0008.ts  hls2_1_0009.ts  hls2_1_0010.ts  hls2_1_0011.ts  master.m3u8
testdata/settings/: complete_settings.toml  incomplete_settings.toml
